fix: wow i was really confused by all that and this should fix the last 5 commits of garbage
