# cmd/server/swag.go
@@ -5,9 +5,7 @@ package main
 //	@title			Jepp API Documentation
 //	@description	This is a simple api to access jeopardy data.
 //	@version		1.0
-//	@host			10.35.220.99:8880
 //	@BasePath		/api
-//	@schemes		https
 //	@contact.name	shreve
 //	@license.name	MIT
 //	@license.url	https://github.com/ecshreve/jepp/blob/main/LICENSE
